# contrib-compass

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml
.cache/: .gitkeep
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy.yml  lint.yml  pr-title-check.yml  release.yml  test.yml
docs/: adding-a-source.md  architecture.md  setup.md  skill-matching.md
src/contrib_compass/: __init__.py  config.py  main.py  models.py
src/contrib_compass/difficulty/: __init__.py  classifier.py
src/contrib_compass/enrichment/: __init__.py  repo_enricher.py
src/contrib_compass/matching/: __init__.py  keyword_matcher.py  scorer.py  semantic_matcher.py
src/contrib_compass/profile/: __init__.py  docx_parser.py  extractor.py  pdf_parser.py  skill_normalizer.py
src/contrib_compass/sources/: __init__.py  base.py  github_source.py  upforgrabs_source.py
src/contrib_compass/web/: __init__.py  router.py  session.py
src/contrib_compass/web/templates/: base.html  index.html  loading.html  results.html
tests/: conftest.py
tests/difficulty/: test_classifier.py
tests/matching/: test_keyword_matcher.py  test_scorer.py
tests/profile/: test_docx_parser.py  test_pdf_parser.py  test_skill_normalizer.py
tests/sources/: test_github_source.py  test_upforgrabs_source.py
tests/web/: test_routes.py
